Removed secrets and secured OAuth config. Implement the Auth, notification frontend.